[2.0] Agregadas cosas de codeCommit de MAC

--- a/elSaber1.html
+++ b/elSaber1.html
@@ -37,7 +37,10 @@
             <a class="nav-link" href="index.html">¿Quienes Somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="niveles.html">Niveles</a>
+            <a class="nav-link" href="elSaber1.html">El Saber 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="elSaber2.html">El Saber 2</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Contacto</a>
@@ -50,35 +53,30 @@
     </div>
   </nav>
 
-  <h1 class="text-center"><strong>Niveles Escolares</strong></h1>
-
   <div class="col-12 col-sm-12 col-md-12 col-lg text-center pb-1">
     <div class="tab">
       <button id="defaultOpen" class="tablinks" onclick="abrirPanel(event, 'el_saber_1')">
-        <h1 style="color: black;">El Saber 1</h1>
-      </button>
-      <button class="tablinks" onclick="abrirPanel(event, 'el_saber_2')">
-        <h1 style="color: black;">El Saber 2</h1>
+        <h1> <strong>El Saber 1</strong></h1>
       </button>
     </div>
     <div id="el_saber_1" class="tabcontent">
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+      <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link active" id="pre-primaria" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Pre-Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link" id="primaria" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link" id="basicos" data-toggle="pill" href="#pills-basicos" role="tab" aria-controls="pills-basicos" aria-selected="false">Básicos</a>
         </li>
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link" id="diversificado" data-toggle="pill" href="#pills-diversificado" role="tab" aria-controls="pills-diversificado" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link" id="finSemana" data-toggle="pill" href="#pills-finSemana" role="tab" aria-controls="pills-finSemana" aria-selected="false">Fin de Semana</a>
         </li>
-        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
           <a class="nav-link" id="ubicacion" data-toggle="pill" href="#pills-ubicacion" role="tab" aria-controls="pills-ubicacion" aria-selected="false">Ubicación</a>
         </li>
       </ul>
@@ -278,146 +276,6 @@
       </div>
     </div>
 
-
-
-
-    <div id="el_saber_2" class="tabcontent scroll">
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item col-lg-4 col-sm-4 col-6">
-          <a class="nav-link active" id="pre-primaria2" data-toggle="pill" href="#pills-pre-primaria2" role="tab" aria-controls="pills-pre-primaria2" aria-selected="true">Pre-Primaria</a>
-        </li>
-        <li class="nav-item col-lg-4 col-sm-4 col-6">
-          <a class="nav-link" id="primaria2" data-toggle="pill" href="#pills-primaria2" role="tab" aria-controls="pills-primaria2" aria-selected="false">Primaria</a>
-        </li>
-        <li class="nav-item col-lg-4 col-sm-4 col-6">
-          <a class="nav-link" id="basicos2" data-toggle="pill" href="#pills-basicos2" role="tab" aria-controls="pills-basicos2" aria-selected="false">Básicos</a>
-        </li>
-        <li class="nav-item col-lg-6 col-sm-6 col-6">
-          <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab" aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
-        </li>
-        <li class="nav-item col-lg-6 col-sm-6 col-12">
-          <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab" aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
-        </li>
-      </ul>
-
-      <div class="tab-content scroll" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-pre-primaria2" role="tabpanel" aria-labelledby="pre-primaria2">
-          <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/FotosParaPágina/Preprimaria_S1.jpg" alt="Pre-Primaria">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">
-                  Pre - Primaria <br>
-                </li>
-                <li class="list-group-item list-group-item-primary">
-                  Kinder: 3 y 4 años
-                </li>
-                <li class="list-group-item list-group-item-success">
-                  Párvulos: 5 años <br>
-                </li>
-                <li class="list-group-item list-group-item-warning">
-                  Preparatoria: 6 años <br>
-                </li>
-                <li class="list-group-item list-group-item-info">
-                  Horario: 7:00 a.m. a 12:30 p.m <br>
-                  Inscripción: Q.500.00 <br>
-                  Cuota Mensual Q.325.00
-                </li>
-              </ul>
-              <p>Fecha de Inscripción: Noviembre y Enero</p>
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="tab-pane fade" id="pills-primaria2" role="tabpanel" aria-labelledby="primaria2">
-          <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/FotosParaPágina/Primaria_S2.jpg" alt="">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">
-                  Primaria <br>
-                </li>
-                <li class="list-group-item list-group-item-primary">
-                  Primero a Sexto Primaria
-                </li>
-                <li class="list-group-item list-group-item-success">
-                  Horario: 7:00 a.m. a 12:40 p.m. <br>
-                </li>
-                <li class="list-group-item list-group-item-warning">
-                  Inscripción: Q.500.00 <br>
-                  Cuota Mensual: Q.350.00
-                </li>
-              </ul>
-              <p>Fecha de Inscripción: Noviembre y Enero</p>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="pills-basicos2" role="tabpanel" aria-labelledby="basicos2">
-          <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/FotosParaPágina/Basicos_S2.jpg" alt="">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">
-                  Básicos <br>
-                </li>
-                <li class="list-group-item list-group-item-primary">
-                  Primero a Tercero Básico
-                </li>
-                <li class="list-group-item list-group-item-success">
-                  Horario: 7:00 a.m. a 12:50 p.m. <br>
-                </li>
-                <li class="list-group-item list-group-item-warning">
-                  Inscripción: Q.500.00 <br>
-                  Cuota Mensual: Q.375.00
-                </li>
-              </ul>
-              <p>Fecha de Inscripción: Noviembre y Enero</p>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="pills-diversificado2" role="tabpanel" aria-labelledby="diversificado2">
-          <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/FotosParaPágina/Diversificado_S2.jpg" alt="">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">Diversificado</li>
-                <li class="list-group-item list-group-item-info">
-                  <u>Magisterio Infantil Bilingüe Intercultural</u> <br>
-                  (Con énfasis en Idioma Inglés) <br>
-                  Horario: 7:00 a.m. a 1:30 p.m. <br>
-                  Inscripción: Q.500.00 <br>
-                  Cuota mensual: Q.450.00
-                </li>
-                <li class="list-group-item list-group-item-primary">
-                  <u>Bachillerato en Ciencias y Letras con Orientacion en: <br>
-                    - Diseño Gráfico <br>
-                    - Electricidad</u> <br>
-                  Horario: 7:00 a.m. a 12:50 p.m. <br>
-                  Inscripción: Q.500.00 <br>
-                  Cuota mensual: Q.400.00
-                </li>
-              </ul>
-              <p>Fecha de Inscripción: Noviembre y Enero</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="tab-pane fade show" id="pills-ubicacion2" role="tabpanel" aria-labelledby="ubicacion2">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1148.2966935565717!2d-90.40776420563567!3d14.51942477658745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x919826d065a91b04!2sCentro+Educativo+Integral+El+Saber+2!5e0!3m2!1ses-419!2sgt!4v1540960339512"
-            width="800" height="650" frameborder="0" style="border:1px solid blue;" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
     <br>
     <div class="col-12">
       <h3>Los pagos se realizan en fechas del 1 al 10 de cada mes en Banco del sistema indicado por el establecimiento del 11 de cada mes en adelante se generan cargos por mora. (Aplica a diario y fin de semana).</h3>
