--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="niveles.html">Niveles</a>
+            <a class="nav-link" href="elSaber1.html">El Saber 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="elSaber2.html">El Saber 2</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contacto">Contacto</a>
@@ -165,27 +168,27 @@
       <div class="col-12 col-sm-8 col-md-8 text-center pb-1">
         <div class="container">
           <nav class="nav nav-pills flex-column flex-sm-row">
-            <button id="defaultOpen" class="flex-fill text-center tab active" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
-            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Proposito')">Propósito</button>
-            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Mision')">Misión</button>
-            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Vision')">Visión</button>
-            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Historia')">Historia</button>
+            <button style="background-color: rgba(127, 192, 63, 0.2);" id="defaultOpen" class="flex-fill text-center tab active" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
+            <button style="background-color: rgba(255, 0, 0, 0.2);" class="flex-fill text-center tab" onclick="abrirPanel(event, 'Proposito')">Propósito</button>
+            <button style="background-color: rgba(63, 182, 191, 0.2);" class="flex-fill text-center tab" onclick="abrirPanel(event, 'Mision')">Misión</button>
+            <button style="background-color: rgba(89, 63, 191, 0.2);" class="flex-fill text-center tab" onclick="abrirPanel(event, 'Vision')">Visión</button>
+            <button style="background-color: rgba();" class="flex-fill text-center tab" onclick="abrirPanel(event, 'Historia')">Historia</button>
           </nav>
 
-          <div id="Objetivo" class="tabcontent scroll">
+          <div style="background-color: rgba(127, 192, 63, 0.2);" id="Objetivo" class="tabcontent scroll">
             <h3 class="text-center">Objetivo</h3>
             <p class="justificar">Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente
               aceptados, satisfechos y
               felices,
               con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</p>
           </div>
-          <div id="Proposito" class="tabcontent scroll">
+          <div style="background-color: rgba(255, 0, 0, 0.2);" id="Proposito" class="tabcontent scroll">
             <h3 class="text-center">Propósito</h3>
             <p class="justificar">Como institución educativa ofrecer coeducación, y preparación individual, con elementos científicos y valores morales teniendo en cuenta su personalidad, nuevos modelos y cultura de paz dentro de un mundo
               competitivo.</p>
           </div>
 
-          <div id="Mision" class="tabcontent scroll">
+          <div style="background-color: rgba(63, 182, 191, 0.2);" id="Mision" class="tabcontent scroll">
             <h3 class="text-center">Misión</h3>
             <p class="justificar">Somos una institución educativa donde ofrecemos coeducación y preparación individual con elementos científicos, valores morales teniendo en cuenta su personalidad; valores educativos basados en la reforma
               educativa, CNB propuesta Mineduc
@@ -199,7 +202,7 @@
               comunicación y sobre todo contar con el apoyo de los padres de familia para que nos permitan como comunidad de educadores estar presentes y favorecer el desarrollo de nuestro entorno.</p>
           </div>
 
-          <div id="Vision" class="tabcontent scroll">
+          <div style="background-color: rgba(89, 63, 191, 0.2);" id="Vision" class="tabcontent scroll">
             <h3 class="text-center">Visión</h3>
             <p class="justificar">Ser una institución fuerte con identidad propia, donde cada uno de los integrantes de esta comunidad se sienta comprometido con el aprendizaje y desarrollo personal de los alumnos y alumnas, para que alcancen
               el éxito a nivel escolar y
