[2.1] Nueva sección para Requisitos de inscripción, esperando feedBack

--- a/elSaber1.html
+++ b/elSaber1.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="requisitos.html">Requisitos</a>
+          </li>
           <!-- <li class="nav-item">
                 <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
               </li> -->
@@ -238,30 +241,6 @@
                     <strong>Bachillerato en Ciencias y Letras por Madurez con Diplomado en Computación</strong> (1 año) <br>
                     Inscripción: Q.250.00 <br>
                     Cuota mensual: Q.225.00 <br>
-                  </li>
-                  <li class="list-group-item list-group-item-warning">
-                    <u>Papelería de Inscripción</u> <br>
-                    <p style="text-align: justify;">Las inscripciones se inician en el mes de noviembre y continúa en enero. <br>
-                    <strong>Al momento de inscripción llenará un formulario de inscripción y ficha de control individual.</strong> <br>
-                    Cada alumno debe entregar en un folder tamaño oficio color <span style="color: red;"><u>rojo para plan diario</u></span> y <span style="color: blue;"><u>azul oscuro para los fin de semana</u></span>, la papelería requerida, en el siguiente orden, de acuerdo al grado al que ingrese. <br>
-                    ● Certificación de nacimiento original y reciente de RENAP y dos fotocopias. <br>
-                    ● Dos fotografías recientes. <br>
-                    ● Constancia parvularia firmada por el Ministerio de educación (no indispensable). <br>
-                    ● Certificado original de 1ro. Primaria. <br>
-                    ● Certificado original de 2do. Primaria. <br>
-                    ● Certificado original de 3ro. Primaria. <br>
-                    ● Certificado original de 4to. Primaria. <br>
-                    ● Certificado original de 5to. Primaria. <br>
-                    ● Certificado original de 6to. Primaria. <br>
-                    ● Diploma de sexto primaria. <br>
-                    ● Certificado original de 1ro. Básico con matrícula o Código Personal. <br>
-                    ● Certificado original de 2do. Básico con matrícula o Código Personal. <br>
-                    ● Certificado original de 3ro. Básico con matrícula o Código Personal. <br>
-                    ● Diploma de Tercero Básico firmado por Supervisor Educativo en original. <br>
-                    ● Certificado de 4to. Diversificado con matrícula o Código Personal. <br>
-                    ● Certificado de 5to. Diversificado con matrícula o Código Personal. <br>
-                    ● Carta de buena conducta. <br>
-                    </p>
                   </li>
                   <li class="list-group-item list-group-item-info">Los alumnos de <u>Plan Fin de Semana</u> no utilizan libros de texto, unicamente plataformas digitales, lo que reduce el costo inicial de material</li>
                 </ul>
