--- a/elSaber2.html
+++ b/elSaber2.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="requisitos.html">Requisitos</a>
+          </li>
           <!-- <li class="nav-item">
                 <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
               </li> -->
