--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#contacto">Contacto</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="requisitos.html">Requisitos</a>
+          </li>
           <!-- <li class="nav-item">
               <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
             </li> -->
