[2.1.1] Colocado en negrita el text folder tamaño oficio

--- a/requisitos.html
+++ b/requisitos.html
@@ -61,7 +61,7 @@
       <div class="card-body text-justify">
         <p>Las inscripciones se inician en el mes de noviembre y continúa en enero. <br>
           <strong>Al momento de inscripción llenará un formulario de inscripción y ficha de control individual.</strong> <br>
-          Cada alumno debe entregar en un <u>folder tamaño oficio</u> color <span style="color: red;"><u>rojo para plan diario</u></span> y <span style="color: blue;"><u>azul oscuro para los fin de semana</u></span>, la papelería requerida, en el
+          Cada alumno debe entregar en un <b><u>folder tamaño oficio</u></b> color <span style="color: red;"><u>rojo para plan diario</u></span> y <span style="color: blue;"><u>azul oscuro para los fin de semana</u></span>, la papelería requerida, en el
           siguiente orden, de acuerdo al grado al que ingrese. <br>
         </p>
         <div class="list-group centrar col-lg-8 col-md-10">
