--- a/elSaber2.html
+++ b/elSaber2.html
@@ -14,7 +14,7 @@
   <link href="css/nav.css" rel="stylesheet">
   <link href="css/tabNiveles.css" rel="stylesheet">
 
-  <title>Niveles | Centro Educativo Integral El Saber</title>
+  <title>El Saber 2 | Centro Educativo Integral El Saber</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="59">
