--- a/requisitos.html
+++ b/requisitos.html
@@ -13,7 +13,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
 
-  <title>Niveles | Centro Educativo Integral El Saber</title>
+  <title>Requisitos | Centro Educativo Integral El Saber</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="59">
