--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <!-- TÍTULO -->
-  <title>Pagina Principal | Centro Educativo Integral El Saber</title>
+  <title>Página Principal | Centro Educativo Integral El Saber</title>
 
   <!-- LINKS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
