--- a/elSaber2.html
+++ b/elSaber2.html
@@ -23,7 +23,8 @@
       <img src="img/logo_el_saber.png" alt="logo">
       <span class="titulo" style="vertical-align: middle;">Centro Educativo Integral El Saber</span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -48,6 +49,19 @@
           <li class="nav-item">
             <a class="nav-link" href="requisitos.html">Requisitos</a>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="btn btn-light btn-lg btn-block dropdown-toggle" type="button" id="colegios" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Iniciar Sesión
+              </button>
+              <div class="dropdown-menu" aria-labelledby="colegios">
+                <a class="dropdown-item text-dark" href="https://s1.colegioelsaber.edu.gt/">El Saber 1</a>
+                <a class="dropdown-item text-dark" href="https://s2.colegioelsaber.edu.gt/">El Saber 2</a>
+                <a class="dropdown-item text-dark" href="https://pfs.colegioelsaber.edu.gt/">El Saber PFS</a>
+              </div>
+            </div>
+          </li>
           <!-- <li class="nav-item">
                 <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
               </li> -->
@@ -67,19 +81,24 @@
     <div id="el_saber_2" class="tabcontent scroll">
       <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
         <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
-          <a class="nav-link active" id="pre-primaria2" data-toggle="pill" href="#pills-pre-primaria2" role="tab" aria-controls="pills-pre-primaria2" aria-selected="true">Pre-Primaria</a>
+          <a class="nav-link active" id="pre-primaria2" data-toggle="pill" href="#pills-pre-primaria2" role="tab"
+            aria-controls="pills-pre-primaria2" aria-selected="true">Pre-Primaria</a>
         </li>
         <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
-          <a class="nav-link" id="primaria2" data-toggle="pill" href="#pills-primaria2" role="tab" aria-controls="pills-primaria2" aria-selected="false">Primaria</a>
+          <a class="nav-link" id="primaria2" data-toggle="pill" href="#pills-primaria2" role="tab"
+            aria-controls="pills-primaria2" aria-selected="false">Primaria</a>
         </li>
         <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
-          <a class="nav-link" id="basicos2" data-toggle="pill" href="#pills-basicos2" role="tab" aria-controls="pills-basicos2" aria-selected="false">Básicos</a>
+          <a class="nav-link" id="basicos2" data-toggle="pill" href="#pills-basicos2" role="tab"
+            aria-controls="pills-basicos2" aria-selected="false">Básicos</a>
         </li>
         <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
-          <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab" aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
+          <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab"
+            aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
         </li>
         <li class="nav-item col-lg-2 col-md-12 col-sm-4 col-12">
-          <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab" aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
+          <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab"
+            aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
         </li>
       </ul>
 
@@ -196,14 +215,16 @@
         </div>
 
         <div class="tab-pane fade show" id="pills-ubicacion2" role="tabpanel" aria-labelledby="ubicacion2">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1148.2966935565717!2d-90.40776420563567!3d14.51942477658745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x919826d065a91b04!2sCentro+Educativo+Integral+El+Saber+2!5e0!3m2!1ses-419!2sgt!4v1540960339512"
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1148.2966935565717!2d-90.40776420563567!3d14.51942477658745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x919826d065a91b04!2sCentro+Educativo+Integral+El+Saber+2!5e0!3m2!1ses-419!2sgt!4v1540960339512"
             width="800" height="650" frameborder="0" style="border:1px solid blue;" allowfullscreen></iframe>
         </div>
       </div>
     </div>
     <br>
     <div class="col-12">
-      <h3>Los pagos se realizan en fechas del 1 al 10 de cada mes en Banco del sistema indicado por el establecimiento del 11 de cada mes en adelante se generan cargos por mora. (Aplica a diario y fin de semana).</h3>
+      <h3>Los pagos se realizan en fechas del 1 al 10 de cada mes en Banco del sistema indicado por el establecimiento
+        del 11 de cada mes en adelante se generan cargos por mora. (Aplica a diario y fin de semana).</h3>
     </div>
     <br>
   </div>
@@ -217,9 +238,12 @@
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
         <h3 class="text-center">¡Síguenos!</h3>
-        <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
-        <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
-        <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
+        <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear"
+            src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
+        <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear"
+            src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
+        <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png"
+            alt="gmail_to_El_Saber"></a>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
         <h3>Centro Educativo Integral <br> El Saber 2</h3>
@@ -229,11 +253,17 @@
     </div>
   </footer>
 
-  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RC SoftGroup</p>
+  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RCESoftGroup</p>
   <!-- SCRIPTS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
   <script src="js/index.js" type="text/javascript"></script>
 </body>
 
