--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
   <title>Página Principal | Centro Educativo Integral El Saber</title>
 
   <!-- LINKS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
@@ -43,7 +43,7 @@
             <a class="nav-link" href="#inicio">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#quienesSomos">¿Quienes Somos?</a>
+            <a class="nav-link" href="#quienesSomos">¿Quiénes Somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="elSaber1.html">El Saber 1</a>
@@ -57,7 +57,20 @@
           <li class="nav-item">
             <a class="nav-link" href="requisitos.html">Requisitos</a>
           </li>
-          <!-- <li class="nav-item">
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn btn-light btn-lg btn-block dropdown-toggle" type="button" id="colegios"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Iniciar Sesión
+                </button>
+                <div class="dropdown-menu" aria-labelledby="colegios">
+                  <a class="dropdown-item text-dark" href="https://s1.colegioelsaber.edu.gt/">El Saber 1</a>
+                  <a class="dropdown-item text-dark" href="https://s2.colegioelsaber.edu.gt/">El Saber 2</a>
+                  <a class="dropdown-item text-dark" href="https://pfs.colegioelsaber.edu.gt/">El Saber PFS</a>
+                </div>
+              </div>
+            </li>
+ <!-- <li class="nav-item">
               <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
             </li> -->
         </ul>
@@ -90,7 +103,6 @@
           <li data-target="#carousel" data-slide-to="17"></li>
           <li data-target="#carousel" data-slide-to="18"></li>
           <li data-target="#carousel" data-slide-to="19"></li>
-
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -101,6 +113,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (1).jpg" alt="el_saber_2">
+
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (2).jpg" alt="el_saber_2">
@@ -160,10 +173,22 @@
         <a class="carousel-control-next" href="#carousel" data-slide="next">
           <span class="carousel-control-next-icon"></span>
         </a>
-
       </div>
     </main>
   </section>
+
+    <button
+      class="col-lg-3 col-md-5 col-md-3 col-sm-10 col-xs-12 offset-lg-8 offset-md-7 offset-sm-1 btn btn-lg btn-white aviso"
+      data-toggle="modal" data-target="#exampleModal">Capacitación Plataforma Educativa</button>
+    <a href="/revista.html"
+    style=" position: absolute;
+    top: 21%;
+    border: 10px red solid;
+    background-color: white;
+    border-radius: 5px;
+    font-size: 1rem;"
+      class="col-lg-3 col-md-5 col-md-3 col-sm-10 col-xs-12 offset-lg-8 offset-md-7 offset-sm-1 btn btn-lg btn-white"
+      >Revista Graduandos 2020</a>
 
   <section id="quienesSomos">
     <h1 style="color: black;" class="text-center">¿Quienes Somos?</h1>
@@ -180,7 +205,7 @@
 
           <div style="background-color: rgba(127, 192, 63, 0.2);" id="Objetivo" class="tabcontent scroll">
             <h3 class="text-center">Objetivo</h3>
-            <p class="justificar">Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar como estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de si mismo, productivos, socialmente
+            <p class="justificar">Motivar e incentivar a jóvenes y adultos a descubrir, interesarse e investigar cómo estudiar. Logrando que nuestros alumnos en el futuro sean adultos responsables, seguros de sí mismos, productivos, socialmente
               aceptados, satisfechos y
               felices,
               con valores cívicos y morales bien arraigados, conscientes de sus capacidades y diferencias, sensibles de la necesidad de ayudar, apoyar y aceptar a todos como iguales.</p>
@@ -224,16 +249,18 @@
               en el de preprimaria y funcionó con el nombre de “JARDIN INFANTIL SAN JOSE”, estando activo durante cinco años, después de los cuales se solicita una ampliación de servicios para el nivel primaria.
               <br>
               <br>
-              En esta cobertura se considera un nombre que integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL El SABER”.
+              En esta cobertura se considera un nombre que integrar dentro de él, el servicio eficiente, responsable y de calidad educativa. Y, se solicita el expediente de apertura del servicio educativo con el nombre de “CENTRO EDUCATIVO INTEGRAL
+              El SABER”.
               Su fundadora y primera directora fue la Maestra de Educación Primaria Urbana María Martha Castilla quien cede la Dirección a su hija Anabella Eunice Maldonado Castilla y quién queda como directora de los niveles de preprimaria y
               primaria.
               <br>
               <br>
               En el año de 2002 se traslada a otras instalaciones en la 2da. Calle 1-40 zona 2, donde actualmente funciona, ya con un inmueble con condiciones favorables se solicita la ampliación de servicios y jornadas especiales.
-              Nivel Básico y Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por Madurez,
+              Nivel Básico y Diversificado con las Carreras de: Bachillerato en Ciencias y Letras con Orientación en Computación, Perito Contador, Secretariado Oficinista y Plan Fin de Semana: Primaria para adultos, Básicos Normales, Básicos por
+              Madurez,
               Bachillerato por bajo la Dirección de Hugo Rolando Sandoval Castilla.
-            <br>
-            <br>
+              <br>
+              <br>
               En el año 2008 se invierte en una nueva infraestructura ubicada el Lote 3, Manzana D, Sector Los Claveles de
               Residenciales San José. Dos años más tarde se solicitan los servicios y se abre otro establecimiento
               denominado Centro Educativo Integral El Saber No. 2 con los niveles de Preprimaria, Primaria y Básicos, siendo
@@ -278,7 +305,44 @@
     </footer>
   </section>
 
-  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RC SoftGroup</p>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Capacitación Plataforma Educativa</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="text-center">Viernes 1 de marzo, 7:30 p.m.</p>
+          <a class="btn btn-danger btn-block" target="_blank" href="https://youtu.be/5qdEUVZydRA"><i class="fab fa-youtube"></i>
+            Capacitación #2 para Maestros <i class="fab fa-youtube"></i></a>
+            <hr>
+          <p class="text-center">Viernes 1 de marzo, 7:30 p.m.</p>
+          <a class="btn btn-danger btn-block" target="_blank" href="https://youtu.be/5CNEQLHX8BU"><i class="fab fa-youtube"></i>
+            Capacitación para Alumnos <i class="fab fa-youtube"></i></a>
+        </div>
+        <hr>
+        <a target="_blank" href="https://www.google.com.mx/chrome/?brand=CHBD&gclid=Cj0KCQiAh9njBRCYARIsALJhQkHUnAplwBXcH9EWEYeuT70gujmif3toUL7F64jtWqsaCIWulNlCes0aArBFEALw_wcB&gclsrc=aw.ds">
+          <div class="alert alert-danger text-center">
+            <i class="fas fa-exclamation-circle"></i>
+            <p>Para utilizar la plataforma correctamente es necesario la última versión de Google Chrome.
+              <br>
+              Click aquí para Descargar
+            </p>
+            <img width="50px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Chrome_icon_%28September_2014%29.svg/240px-Google_Chrome_icon_%28September_2014%29.svg.png" alt="logo_Chrome">
+          </div>
+        </a>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <p class="text-center" style="font-size: 0.8em;">Powered By RCE SoftGroup &copy; 2019</p>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
