--- a/requisitos.html
+++ b/requisitos.html
@@ -44,6 +44,20 @@
           <li class="nav-item">
             <a class="nav-link" href="requisitos.html">Requisitos</a>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="btn btn-light btn-lg btn-block dropdown-toggle" type="button" id="colegios"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Iniciar Sesión
+              </button>
+              <div class="dropdown-menu" aria-labelledby="colegios">
+                <a class="dropdown-item text-dark" href="https://s1.colegioelsaber.edu.gt/">El Saber 1</a>
+                <a class="dropdown-item text-dark" href="https://s2.colegioelsaber.edu.gt/">El Saber 2</a>
+                <a class="dropdown-item text-dark" href="https://pfs.colegioelsaber.edu.gt/">El Saber PFS</a>
+              </div>
+            </div>
+          </li>
+
           <!-- <li class="nav-item">
                 <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
               </li> -->
@@ -125,7 +139,7 @@
     </div>
   </footer>
 
-  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RC SoftGroup</p>
+  <p class="text-center" style="font-size: 0.8em;">Powered By &copy;RCESoftGroup</p>
   <!-- SCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
