--- a/revista.html
+++ b/revista.html
@@ -109,15 +109,20 @@
         <div class="row">
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <button role="button" class="btn btn-danger action btn-block"
-                valor="https://www.flipbookpdf.net/web/site/8ea3d013aa79cfc517aa1e6d6d71a19f12062e24202008.pdf.html"
-                data-toggle="collapse" data-target="#demo">
-                11 de Marzo de 2020
-            </button>
-            <button role="button" class="btn btn-danger action btn-block"
-                valor="https://www.flipbookpdf.net/web/site/b68f0cfb9fb0bfbe8d1855ad0ba5f8e8b53abe49202007.pdf.html"
-                data-toggle="collapse" data-target="#demo">
-                4 de Agosto 2019
-            </button>
+                    valor="https://www.flipbookpdf.net/web/site/07bcccae57760c20a9f2c848f8f212c694265d52202008.pdf.html"
+                    data-toggle="collapse" data-target="#demo">
+                    18 de agosto de 2020
+                </button>
+                <button role="button" class="btn btn-danger action btn-block"
+                    valor="https://www.flipbookpdf.net/web/site/8ea3d013aa79cfc517aa1e6d6d71a19f12062e24202008.pdf.html"
+                    data-toggle="collapse" data-target="#demo">
+                    11 de agosto de 2020
+                </button>
+                <button role="button" class="btn btn-danger action btn-block"
+                    valor="https://www.flipbookpdf.net/web/site/b68f0cfb9fb0bfbe8d1855ad0ba5f8e8b53abe49202007.pdf.html"
+                    data-toggle="collapse" data-target="#demo">
+                    4 de Agosto 2019
+                </button>
                 <br>
                 <br>
                 <p class="text-center" style="font-size: 0.8em; position: relative; bottom: 15px;">Powered By RCE
@@ -128,7 +133,7 @@
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <div id="demo" class="collapse show width ">
                     <iframe id="iframe" class="responsive-iframe" style="min-width: 100%; min-height: 700px;"
-                        src="https://www.flipbookpdf.net/web/site/b68f0cfb9fb0bfbe8d1855ad0ba5f8e8b53abe49202007.pdf.html"></iframe>
+                        src="https://www.flipbookpdf.net/web/site/07bcccae57760c20a9f2c848f8f212c694265d52202008.pdf.html"></iframe>
                 </div>
             </div>
         </div>
