corrección de texto

--- a/revista.html
+++ b/revista.html
@@ -121,7 +121,7 @@
                 <button role="button" class="btn btn-danger action btn-block"
                     valor="https://www.flipbookpdf.net/web/site/b68f0cfb9fb0bfbe8d1855ad0ba5f8e8b53abe49202007.pdf.html"
                     data-toggle="collapse" data-target="#demo">
-                    4 de Agosto 2019
+                    4 de agosto 2020
                 </button>
                 <br>
                 <br>
