--- a/revista.html
+++ b/revista.html
@@ -109,6 +109,11 @@
         <div class="row">
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <button role="button" class="btn btn-danger action btn-block"
+                    valor="https://www.flipbookpdf.net/web/site/ef05e2f950a9abbdd82b076d73083c870dbcb659202008.pdf.html"
+                    data-toggle="collapse" data-target="#demo">
+                    25 de agosto de 2020
+                </button>
+                <button role="button" class="btn btn-danger action btn-block"
                     valor="https://www.flipbookpdf.net/web/site/07bcccae57760c20a9f2c848f8f212c694265d52202008.pdf.html"
                     data-toggle="collapse" data-target="#demo">
                     18 de agosto de 2020
@@ -133,7 +138,7 @@
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <div id="demo" class="collapse show width ">
                     <iframe id="iframe" class="responsive-iframe" style="min-width: 100%; min-height: 700px;"
-                        src="https://www.flipbookpdf.net/web/site/07bcccae57760c20a9f2c848f8f212c694265d52202008.pdf.html"></iframe>
+                        src="https://www.flipbookpdf.net/web/site/ef05e2f950a9abbdd82b076d73083c870dbcb659202008.pdf.html"></iframe>
                 </div>
             </div>
         </div>
